button not showing bug

--- a/public/videostyle.css
+++ b/public/videostyle.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
   overflow: hidden;
 }
+html {
+  width: 100%;
+  height: 100%;
+}
 #video-grid {
   /* width: 1075px; */
   width: 100%;
